// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`servie-errorhandler should render an error 1`] = `
Object {
  "body": Object {
    "bodyUsed": false,
    "buffered": true,
    "hasBody": true,
    "headers": Object {
      "content-length": "148",
      "content-type": "text/plain",
    },
  },
  "bytesTransferred": 0,
  "finished": false,
  "headers": Object {
    "content-security-policy": "default-src 'self'",
    "content-type": "text/html",
    "etag": "\\"nEMR0dTcxiXzva8aD5LjL8jzN8k3Yr+BdwzoIBimObQ=\\"",
    "x-content-type-options": "nosniff",
  },
  "started": false,
  "statusCode": 500,
  "statusMessage": undefined,
  "trailers": Object {},
}
`;

exports[`servie-errorhandler should render boom status errors 1`] = `
Object {
  "body": Object {
    "bodyUsed": false,
    "buffered": true,
    "hasBody": true,
    "headers": Object {
      "content-length": "148",
      "content-type": "text/plain",
    },
  },
  "bytesTransferred": 0,
  "finished": false,
  "headers": Object {
    "content-security-policy": "default-src 'self'",
    "content-type": "text/html",
    "etag": "\\"nEMR0dTcxiXzva8aD5LjL8jzN8k3Yr+BdwzoIBimObQ=\\"",
    "x-content-type-options": "nosniff",
  },
  "started": false,
  "statusCode": 500,
  "statusMessage": undefined,
  "trailers": Object {},
}
`;

exports[`servie-errorhandler should render http errors status error 1`] = `
Object {
  "body": Object {
    "bodyUsed": false,
    "buffered": true,
    "hasBody": true,
    "headers": Object {
      "content-length": "138",
      "content-type": "text/plain",
    },
  },
  "bytesTransferred": 0,
  "finished": false,
  "headers": Object {
    "content-security-policy": "default-src 'self'",
    "content-type": "text/html",
    "etag": "\\"s+vHeYEiI9G5/tPGBZZs5hJ15xDF68ktGk3d/KknTQU=\\"",
    "x-content-type-options": "nosniff",
  },
  "started": false,
  "statusCode": 400,
  "statusMessage": undefined,
  "trailers": Object {},
}
`;
